--- a/tex/main.tex
+++ b/tex/main.tex
@@ -675,7 +675,7 @@ We improve on it in \S\ref{ss:3s}.
 
 
 
-\subsection{Role of RanBP1} \label{ss:ranbp1}
+\subsection{GTP hydrolysis and role of RanBP1} \label{ss:ranbp1}
 
 According to 
 \cite[\href{https://i.ibb.co/6ghqPB7/image.jpg}{Fig.~4A}]{LounsburyMacara1997},
@@ -946,6 +946,18 @@ the ``knockoff'' reaction releases the cargo
 
 \subsubsection*{Baseline parameters} \label{ss:3s:baseline}
 
+Here we comment on the choice of 
+selected
+model parameters,
+such as concentrations and kinetic rates.
+%
+%
+The complete set of parameters
+is recorded 
+in [\TODO{Link to checkpoint base model}].
+
+%
+
 We estimate the total NPC channel capacity
 as 
 2000 NPCs per nuclear envelope
@@ -983,9 +995,6 @@ we estimate
 
 \TODO{complete section}
 
-The definitive set of parameters
-is recorded 
-in [\TODO{Link to checkpoint base model}].
 
 %
 
@@ -1037,6 +1046,10 @@ reported in
 	as expected.
 \end{itemize}
 
+
+\section{Conclusions}
+
+\TODO{conclude}
 
 
 \section{Old stuff dump -- ignore}
