--- a/tex/refs.bib
+++ b/tex/refs.bib
@@ -198,3 +198,97 @@
 }
 
 
+@article{ZienkiewiczETAL2013,
+	doi = {10.1161/jaha.113.000386},
+	url = {https://doi.org/10.1161%2Fjaha.113.000386},
+	year = 2013,
+	month = {sep},
+	publisher = {Ovid Technologies (Wolters Kluwer Health)},
+	volume = {2},
+	number = {5},
+	author = {Jozef Zienkiewicz and Amy Armitage and Jacek Hawiger},
+	title = {Targeting Nuclear Import Shuttles, Importins/Karyopherins alpha by a Peptide Mimicking the {NF}$\upkappa$B1/p50 Nuclear Localization Sequence},
+	journal = {JAHA}
+}
+
+@article{WuhrETAL2014,
+	doi = {10.1016/j.cub.2014.05.044},
+	url = {https://doi.org/10.1016%2Fj.cub.2014.05.044},
+	year = 2014,
+	month = {jul},
+	publisher = {Elsevier {BV}},
+	volume = {24},
+	number = {13},
+	pages = {1467--1475},
+	author = {Martin Wühr and Robert~M. Freeman and Marc Presler and Marko~E. Horb and Leonid Peshkin and Steven~P. Gygi and Marc~W. Kirschner},
+	title = {Deep Proteomics of the Xenopus laevis Egg using an {mRNA}-Derived Reference Database},
+	journal = {Current Biology}
+}
+
+
+@article{WuhrETAL2015,
+	doi = {10.1016/j.cub.2015.08.047},
+	url = {https://doi.org/10.1016%2Fj.cub.2015.08.047},
+	year = 2015,
+	month = {oct},
+	publisher = {Elsevier {BV}},
+	volume = {25},
+	number = {20},
+	pages = {2663--2671},
+	author = {Martin Wühr and Thomas Güttler and Leonid Peshkin and Graeme~C. McAlister and Matthew Sonnett and Keisuke Ishihara and Aaron~C. Groen and Marc Presler and Brian~K. Erickson and Timothy~J. Mitchison and Marc~W. Kirschner and Steven~P. Gygi},
+	title = {The Nuclear Proteome of a Vertebrate},
+	journal = {Current Biology}
+}
+
+
+@article{KirliETAL2015,
+	doi = {10.7554/elife.11466},
+	url = {https://doi.org/10.7554%2Felife.11466},
+	year = 2015,
+	month = {dec},
+	publisher = {{eLife} Sciences Publications, Ltd},
+	volume = {4},
+	author = {Koray K{\i}rl{\i} and Samir Karaca and Heinz Jürgen Dehne and Matthias Samwer and Kuan Ting Pan and Christof Lenz and Henning Urlaub and Dirk Görlich},
+	title = {A deep proteomics perspective on {CRM}1-mediated nuclear export and nucleocytoplasmic partitioning},
+	journal = {{eLife}}
+}
+
+@article{KalitaKapinosLim2021,
+	doi = {10.1242/jcs.240382},
+	url = {https://doi.org/10.1242%2Fjcs.240382},
+	year = 2021,
+	month = {apr},
+	publisher = {The Company of Biologists},
+	volume = {134},
+	number = {7},
+	author = {Joanna Kalita and Larisa E. Kapinos and Roderick Y. H. Lim},
+	title = {On the asymmetric partitioning of nucleocytoplasmic transport {\textendash} recent insights and open questions},
+	journal = {Journal of Cell Science}
+}
+
+@article{NguyenPappireddiWuhr2019,
+	doi = {10.1016/j.cbpa.2018.10.027},
+	url = {https://doi.org/10.1016%2Fj.cbpa.2018.10.027},
+	year = 2019,
+	month = {feb},
+	publisher = {Elsevier {BV}},
+	volume = {48},
+	pages = {55--63},
+	author = {Thao Nguyen and Nishant Pappireddi and Martin Wühr},
+	title = {Proteomics of nucleocytoplasmic partitioning},
+	journal = {Current Opinion in Chemical Biology}
+}
+
+@article{YangMusser2006,
+	doi = {10.1083/jcb.200605053},
+	url = {https://doi.org/10.1083%2Fjcb.200605053},
+	year = 2006,
+	month = {sep},
+	publisher = {Rockefeller University Press},
+	volume = {174},
+	number = {7},
+	pages = {951--961},
+	author = {Weidong Yang and Siegfried M. Musser},
+	title = {Nuclear import time and transport efficiency depend on importin $\upbeta$ concentration},
+	journal = {Journal of Cell Biology}
+}
